# tinytorch

./: .gitignore  CMakeLists.txt  LICENSE  README.md  pyproject.toml
.github/workflows/: ci-cpu.yml  ci-gpu.yml  ci.yml  py-unittest.yml  unittest.yml
SSEloss/: sse.py
csrc/: CMakeLists.txt  macros.h
csrc/core/: CMakeLists.txt  core.cpp
csrc/core/device/: CMakeLists.txt  device.cpp  device.h
csrc/core/device/tests/: CMakeLists.txt  test_device.cpp
csrc/core/kernels/: CMakeLists.txt  ops.cpp  ops.cu  ops.h  relu.h  sigmoid.h
csrc/core/kernels/activation/: CMakeLists.txt  relu.cpp  relu.cu  relu.h  sigmoid.cpp  sigmoid.cu  sigmoid.h  softmax.cpp  softmax.cu  softmax.h
csrc/core/kernels/activation/tests/: CMakeLists.txt  activation_cases.py  test_activation_cpu.cpp  test_activation_gpu.cu
csrc/core/kernels/functions/: CMakeLists.txt  cross_entropy.cpp  cross_entropy.cu  cross_entropy.h  mse.cpp  mse.cu  mse.h  relu.cpp  relu.cu  relu.h  sigmoid.cpp  sigmoid.cu  sigmoid.h  softmax.cpp  softmax.cu  softmax.h
csrc/core/kernels/functions/tests/: CMakeLists.txt  cross_entropy.py  functions_cases.py  test_functions_cpu.cpp  test_functions_gpu.cu
csrc/core/kernels/tests/: CMakeLists.txt  conv2d_case.py  conv2d_case.txt  test.cpp  test_ops_cpu.cpp  test_ops_gpu.cu
csrc/core/memory/: CMakeLists.txt  memory.cpp  memory.cu  memory.h
csrc/core/memory/tests/: CMakeLists.txt  test_memory.cpp  test_memory_cpu.cpp  test_memory_gpu.cu
csrc/error/: error.h
csrc/layers/: CMakeLists.txt  conv2d_layer.cpp  cross_entropy_layer.cpp  fc_layer.cpp  funcs_binding.cpp  layers.cpp  layers.h  mse_layer.cpp  pooling_layer.cpp  softmax_layer.cpp
csrc/layers/tests/: CMakeLists.txt  fc_case.py  pooling_case.py  test_layers.cpp
csrc/tensor/: CMakeLists.txt  tensor.cpp  tensor.cu  tensor.h  tensor_binding.cpp
csrc/tensor/operator/: tensor_activation.cpp  tensor_activation.h
csrc/tensor/operators/: CMakeLists.txt  tensor_activation.cpp  tensor_activation.h  tensor_math_ops.cpp
csrc/tensor/operators/tests/: CMakeLists.txt  test_tensor_at.cpp  test_tensor_ops.cpp
csrc/tensor/tests/: CMakeLists.txt  test_tensor.cpp
docs/: HW01-helper.md  HW02-helper.md  HW03-helper.md  im2col.md
examples/: load_data.py  load_mnist.py  mlp_net.py  tensor.py  tensor_auto_diff.py  test_ce.py  test_conv.py  test_mse.py  vanilla_cnn_cifar.py  vanilla_cnn_mnist.py
examples/cifar10/: README.md  cnn_cifar.py  model.py  train.py  utils.py  vanilla_cnn_cifar10.py
examples/imagenet/: README.md  dataset.py  eval.py  main.py  model.py  train.py  utils.py
examples/mnist/: README.md  a.py  cnn_mnist.py  diffusion.py  eval.py  loading_cnn_model.ipynb  main.py  mlp_mnist.py  mnist_model.npz  model.py  train.py  utils.py
examples/mnist/checkpoint/: model.npz
scripts/: README.md  all_test.sh  build.sh  clean.sh  test.sh
tests/: max_pool.py  test_funcs.py  test_layers.py  test_nn.py  test_tensor.py
tests/utils/: __init__.py
tinytorch/: __init__.py  _funcs.py  _tensor.py  autodiff.py  node.py  operators.py  tensor.py  tensorbase.py
tinytorch/csrc/core/device/: device.cpp  device.h
tinytorch/csrc/tensor/: tensor.h
tinytorch/data/: __init__.py  cifar.py  dataloader.py  dataset.py  mnist.py
tinytorch/funcs/: __init__.py  _funcs.py  funcs.py  funcs_autodiff.py
tinytorch/nn/: __init__.py  activations.py  conv.py  cross_entropy.py  flatten.py  linear.py  loss.py  modules.py  pool.py  relu.py  sequential.py  softmax.py
tinytorch/optim/: __init__.py  adam.py  optim.py  sgd.py
